<resources>
    <string name="app_name">Sabadin</string>
    <string name="buka">Buka</string>
    <string name="tutup">Tutup</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_kontak">Kontak</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>

    <string name="deskripsi_makanan">Tingkatkan penjualan makanan Anda dengan foto produk makanan yang menarik dari studio kami. Dapatkan hasil foto produk makanan yang menarik perhatian pelanggan dan meningkatkan minat mereka untuk mencoba makanan Anda dengan studio foto kami.</string>
    <string name="deskripsi_kosmetik">Biarkan studio foto kami membantu merepresentasikan merek kosmetik Anda dengan hasil foto produk yang menarik dan berkualitas tinggi. Foto produk kosmetik yang terlihat profesional dan menarik dapat meningkatkan citra merek Anda. Percayakan kepada kami untuk menghasilkan gambar yang memikat dan menarik minat pelanggan.</string>
    <string name="deskripsi_minuman">Tunjukkan kelezatan minuman Anda dengan foto produk minuman yang profesional dan menarik dari studio kami. Foto produk minuman yang berkualitas tinggi dapat meningkatkan citra merek Anda. Percayakan kepada kami untuk menghasilkan gambar yang menarik dan profesional</string>
    <string name="deskripsi_pakaian">Tunjukkan koleksi pakaian Anda dengan cara terbaik melalui hasil foto produk yang berkualitas tinggi dan profesional dari studio kami. Foto produk pakaian yang terlihat profesional dan menarik dapat meningkatkan citra merek Anda dan memperkuat daya saing di pasar. Percayakan kepada kami untuk menghasilkan gambar yang memukau dan menarik pelanggan.</string>
    <string name="deskripsi_sepatu">Foto produk sepatu yang memikat dan menarik perhatian pelanggan dapat meningkatkan penjualan dan menguatkan posisi merek Anda di pasar. Biarkan kami menghasilkan gambar produk yang menakjubkan untuk merek sepatu Anda. Dapatkan hasil foto produk sepatu yang terlihat profesional dan menarik di berbagai media promosi dengan studio foto kami.</string>
    <string name="kosong"></string>
</resources>