<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="id.co.salmanharitsi.uts_dpw_sallman.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="id.co.salmanharitsi.uts_dpw_sallman.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_kontak"
        android:name="id.co.salmanharitsi.uts_dpw_sallman.ui.kontak.KontakFragment"
        android:label="@string/menu_kontak"
        tools:layout="@layout/fragment_kontak" />

    <fragment
        android:id="@+id/nav_about"
        android:name="id.co.salmanharitsi.uts_dpw_sallman.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="id.co.salmanharitsi.uts_dpw_sallman."
        android:label="@string/menu_logout" />
</navigation>